--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Pinnacle</title>
     <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=League+Gothic&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Arimo&family=League+Gothic&display=swap');
+    </style>
   </head>
-  <body >
+  <body>
     <div id="root"></div>
   </body>
 </html>
