--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,10 @@
     <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=League+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=League+Gothic&display=swap"
+      rel="stylesheet">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Arimo&family=League+Gothic&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=League+Gothic&display=swap');
     </style>
   </head>
   <body>
